# 2d_game

./: CMakeLists.txt
include/: boss.hpp  hero.hpp  level_1.hpp  settingsSoldier.hpp  soldier.hpp
include/soldier/: settingsSoldier.hpp  soldier.hpp
sources/: level_1.cpp  main.cpp  soldier.cpp
sources/level_1/: level_1.cpp
sources/soldier/: soldier.cpp
